script.polskie.media update v1.1.3

--- a/script.polskie.media/resources/modules/mainMenu.cfg
+++ b/script.polskie.media/resources/modules/mainMenu.cfg
@@ -16,4 +16,13 @@ director=zobacz-tv.eu
 icon=sports.devil.image|zobacztv.png
 url=tv/zobacztv.cfg
 ########################################################
-
+title=Cinema-tv.eu
+director=cinema-tv.eu
+icon=sports.devil.image
+url=tv/cinema-tv.eu.cfg
+########################################################
+title=Darmowe.tv
+director=cinema-tv.eu
+icon=sports.devil.image|darmowetv.png
+url=tv/darmowe.tv.cfg
+########################################################
