--- a/script.polskie.media/resources/modules/mainMenu.cfg
+++ b/script.polskie.media/resources/modules/mainMenu.cfg
@@ -1,7 +1,7 @@
 ########################################################
 # Mrknow Plugin: Sports sites list
 ########################################################
-title=Screen-tv.pl
+title=Screen-TV
 director=screen-tv.pl
 icon=sports.devil.image|screen-tv.png
 url=tv/screen-tv.pl.cfg
@@ -11,14 +11,14 @@ director=Typer TV
 icon=sports.devil.image|typertv.com.pl.png
 url=tv/typertv.com.pl.cfg
 ########################################################
-title=zobacz-tv.eu
+title=Zobacz-TV
 director=zobacz-tv.eu
 icon=sports.devil.image|zobacztv.png
 url=tv/zobacztv.cfg
 ########################################################
-title=Cinema-tv.eu
+title=Cinema-TV
 director=cinema-tv.eu
-icon=sports.devil.image
+icon=sports.devil.image|cinema-tv.eu.png
 url=tv/cinema-tv.eu.cfg
 ########################################################
 title=Darmowe.tv
